--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+
+# Ignore local IDE/editor settings
+.vscode/
+.config/
+.plastic/
+ignore.conf
+
 .utmp/
 /[Ll]ibrary/
 /[Tt]emp/
